modify index.html, style.css & profile-image.jpeg

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bosuko CV</title>
+    <title>Jão CV</title>
     
     <link rel="stylesheet" href="style.css">
 
@@ -15,23 +15,23 @@
             <section class="left-section-content">
                 <div class="profile">
                     <img class="profile-image" src="img/profile-image.jpeg" alt="Profile image">
-                    <p class="Bosuko"></p>
-                    <p class="profession">Software Enginner</p>
+                    <p class="jao"></p>
+                    <p class="profession">Faz tudo</p>
                 </div>
                 <div class="contact-info">
                     <p class="left-title">Contato</p>
                     <ul>
                         <li><i class="fa fa-phonne"></i>+55 11 99999-1111</li>
-                        <li><i class="fa fa-envelop"></i>bosuko@gmail.com</li>
-                        <li><i class="fa fa-globe"></i>www.bosuko.com</li>
-                        <li><i class="fa fa-github"></i>BosukoMoe</li>
+                        <li><i class="fa fa-envelop"></i>jao@jao.com</li>
+                        <li><i class="fa fa-globe"></i>www.jao.com</li>
+                        <li><i class="fa fa-github"></i>JaoFazTudo</li>
                     </ul>
                 </div>
                 <div class="skills">
                     <p class="left-title">Skills</p>
                     <ul>
-                        <li><p>HTML, CSS, Git & GitHub</p></li>
-                        <li><p>Linux, Windows</p></li>
+                        <li><p>C++, Blender, Unreal Engine, Produção áudio visual</p></li>
+                        <li><p>Android, Windows & Xbox</p></li>
                     </ul>
                 </div>
             </section>
@@ -41,12 +41,47 @@
                     <section class="about gap">
                         <div class="right-title">Sobre Mim</div>
                         <p class="about-me-contents">
-                            Olá sou Bosuko.<br>
+                            Olá sou Jão.<br>
                             <br> Um pouco mais sobre o que faço
                             <br> Quais são minhas cometencias
                         </p>
                     </section>
                 </div>
+                <section class="expierence gap">
+                    <div class="right-title">Experiencia</div>
+                    <div class="experience-contents">
+                        <div class="exp-left">
+                            <p class="exp-company-name">Secretária de Estado da Educação</p>
+                            <p class="exp-time-period">2021-Present</p>
+                        </div>
+                        <div class="exp-right">
+                            <p class="exp-position">Engenheiro de Software</p>
+                            <p class="exp-desc">Portabilidade de base física de dados para base digital;</p>
+                            <p class="exp-desc">Criação e manutenção de software para acessar base digital de forma ágil e simplificada;</p>
+                            <p class="exp-desc">Assistência geral aos demais usuários das máquinas do setor;</p>
+                        </div>
+                        <div class="exp-left">
+                            <p class="exp-company-name">Heineken</p>
+                            <p class="exp-time-period">2020</p>
+                        </div>
+                        <div class="exp-right">
+                            <p class="exp-position">Auditagem</p>
+                            <p class="exp-desc">Contagem e resgistro manual de equipamentos comprados;</p>
+                            <p class="exp-desc">Gestão de equipe de rota da auditagem;</p>
+                            <p class="exp-desc">Elaboração e envio de tabela com banco de dados.</p>
+                        </div>
+                        <div class="exp-left">
+                            <p class="exp-company-name">Autonamo</p>
+                            <p class="exp-time-period">2010-2019</p>
+                        </div>
+                        <div class="exp-right">
+                            <p class="exp-position">Produção de palhaços de argila</p>
+                            <p class="exp-desc">Preparação da argila;</p>
+                            <p class="exp-desc">Preparação da forma e aplicação de argila;</p>
+                            <p class="exp-desc">Pintura dos palhaços.</p>
+                        </div>
+                    </div>
+                </section>
             </section>
     </main>
 </body>
