--- a/index.html
+++ b/index.html
@@ -82,6 +82,34 @@
                         </div>
                     </div>
                 </section>
+                <section class="education gap">
+                    <div class="right-title">Formação Acadêmica</div>
+                    <div class="education-contents">
+                    <div class="education-left">
+                        <p class="education-school-name">Universidade USS Interprise</p>
+                        <p class="education-time-period">2020-2023</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Ciência da Computação</p>
+                        <p class="education-desc">
+                            Graduação em engenharia de software
+                        </p>
+                    </div>
+                    </div>
+                    <div class="right-title">Formação Acadêmica</div>
+                    <div class="education-contents">
+                    <div class="education-left">
+                        <p class="education-school-name">Centro Educacional Millenum Falcon</p>
+                        <p class="education-time-period">2004-2019</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Formação de ensino</p>
+                        <p class="education-desc">
+                            Ensino fundamental e médio
+                        </p>
+                    </div>
+                    
+                </section>
             </section>
     </main>
 </body>
