feat: add info awards

--- a/index.html
+++ b/index.html
@@ -82,6 +82,57 @@
                         </div>
                     </div>
                 </section>
+                <section class="education gap">
+                    <div class="right-title">Formação Acadêmica</div>
+                    <div class="education-contents">
+                    <div class="education-left">
+                        <p class="education-school-name">Universidade USS Interprise</p>
+                        <p class="education-time-period">2020-2023</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Ciência da Computação</p>
+                        <p class="education-desc">
+                            Graduação em engenharia de software
+                        </p>
+                    </div>
+                    </div>
+                    <div class="right-title">Formação Acadêmica</div>
+                    <div class="education-contents">
+                    <div class="education-left">
+                        <p class="education-school-name">Centro Educacional Millenum Falcon</p>
+                        <p class="education-time-period">2004-2019</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Formação de ensino</p>
+                        <p class="education-desc">
+                            Ensino fundamental e médio
+                        </p>
+                    </div>
+                </section>
+                <section class="awards gap">
+                    <div class="right-title">Cursos</div>
+                    <div class="awards-contents">
+                        <div class="awards-left">
+                        <p class="awards-company-name">Centro Educacional Millenum Falcon</p>
+                        <p class="awards-time-period">Jnaiero de 2010</p>
+                        </div>
+                        <div class="awards-right">
+                            <p class="awards-name">Ensino fundamental e médio</p>
+                            <p class="awards-desc">
+                                Curso de formação feito na Millenum falco, no ano de 2010 a 2019, com o intuito de preparar para a vida.
+                            </p>
+                        </div><div class="awards-left">
+                            <p class="awards-company-name">Centro Educacional Millenum Falcon</p>
+                            <p class="awards-time-period">Jnaiero de 2010</p>
+                            </div>
+                            <div class="awards-right">
+                                <p class="awards-name">Ensino fundamental e médio</p>
+                                <p class="awards-desc">
+                                    Curso de formação feito na Millenum falco, no ano de 2010 a 2019, com o intuito de preparar para a vida.
+                                </p>
+                            </div>
+                    </div>
+                </section>
             </section>
     </main>
 </body>
